--- a/virtual-store/src/components/NavButton.module.css
+++ b/virtual-store/src/components/NavButton.module.css
@@ -1,20 +1,14 @@
-.nav-li {
-    text-decoration: none;
-    display: inline-block;
+.nav-a {
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  width: 150px;
+  padding: 5px 0;
+  font-size: 14px;
 }
 
-
-.navA {
-    color: white;
-    font-weight: 700;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width: 150px;
-    padding: 5px 0;
-    font-size: 14px;
-}
-
-.navA:hover {
-    text-decoration: underline;
+.nav-a:hover {
+  text-decoration: underline;
 }
